# drift_vector_engine

./: AGENTS.md  CHANGELOG.md  Cargo.toml  FORMAT.md  PAYLOAD_INDEX_V1_SPEC.md  README.md  SYSTEM_VIEW.md  TODO.md  TODO.v2.1.md  V3_STRATEGY.md  technical_paper.md
docs/: API_SPEC.md  CONTEXT.md  DECISIONS.md  NEXT.md  PLAN.md  SESSION_LOG.md  USAGE.md
drift_cache/: Cargo.toml  README.md
drift_cache/src/: block_cache.rs  block_cache_test.rs  lib.rs  local_store.rs  local_store_tests.rs  s3fifo.rs  sharded_fifo.rs  tests.rs  tiered_store.rs  tiered_store_test.rs
drift_core/: Cargo.toml  README.md  build.rs
drift_core/proto/: manifest.proto
drift_core/src/: aligned.rs  bitpack.rs  bucket.rs  bucket_serialization_tests.rs  bucket_tests.rs  index.rs  index_new.rs  index_new_tests.rs  index_tests.rs  index_v2.rs  index_v2_tests.rs  kmeans.rs  lib.rs  lock_manager.rs  maintainance.rs  maintainance_test.rs  manifest.rs  manifest_tests.rs  math.rs  memtable.rs  memtable_tests.rs  memtable_v2.rs  memtable_v2_tests.rs  metric_strategy.rs  partitioner.rs  partitioner_test.rs  partitioner_tests.rs  payload.rs  quantizer.rs  quantizer_tests.rs  router.rs  router_tests.rs  store_integration_test.rs  tests.rs  tombstone.rs  tombstone_tests.rs  tombstone_v2.rs  wal.rs  wal_tests.rs  wal_v2.rs  (+1 more)
drift_core/tests/: bucket_tests.rs  drift_mechanics.rs
drift_kv/: Cargo.toml  README.md
drift_kv/src/: bitstore.rs  lib.rs  tests.rs
drift_server/: Cargo.toml  README.md  build.rs
drift_server/data/recovery_test/: kv.idx
drift_server/proto/: drift.proto
drift_server/src/: chaos_test.rs  cleanup.rs  compactor.rs  compactor_test.rs  config.rs  drift_server.rs  filter_metadata_catalog.rs  filter_planner_diagnostics.rs  global_filter_routing_index.rs  global_metadata_snapshot.rs  janitor.rs  janitor_compaction_test.rs  janitor_stress_test.backup  janitor_stress_test.rs  janitor_tests.rs  janitor_v2.rs  janitor_v2_tests.rs  lib.rs  local_staging.rs  local_staging_test.rs  main.rs  manager.rs  manager_tests.rs  manager_v2.rs  manager_v2_tests.rs  manifest.rs  manifest_tests.rs  metrics.rs  persistence.rs  persistence_test.rs  persistence_tests.rs  persistence_v2.rs  persistence_v2_tests.rs  reaper.rs  reaper_test.rs  recovery.rs  recovery_test.rs  s3_integration_test.rs  scatter_budget_test.rs  scavenger_test.rs  (+9 more)
drift_storage/: Cargo.toml  README.md
drift_storage/src/: block.rs  bucket_file_reader.rs  bucket_file_tests.rs  bucket_file_writer.rs  bucket_integration_test.rs  bucket_manager.rs  bucket_manager_tests.rs  disk_manager.rs  footer_test.rs  format.rs  format_tests.rs  lib.rs  merge_repo_tests.rs  open_dal_integration.rs  row_group_tests.rs  row_group_writer.rs  segment_reader.rs  segment_test.rs  segment_writer.rs  unified_format.rs  unified_reader.rs  unified_writer.rs
drift_storage/src/compression/: alp.rs  alp_rd.rs  alp_rd_tests.rs  alp_tests.rs  fastlanes.rs  mod.rs  wrapper.rs
drift_traits/: Cargo.toml
drift_traits/src/: lib.rs  mock.rs
