[package]
name = "drift_cache"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
parking_lot = "0.12"
twox-hash = "2.1.2"
async-trait = "0.1"                            # For PageManager trait
tokio = { version = "1", features = ["full"] } # For Async Disk I/O
thiserror = "2.0.17"
tempfile = "3.23.0"

[dev-dependencies]
rand = "0.9.2"
