[package]
name = "drift_core"
version = "0.1.0"
edition = "2024"


[dependencies]
# Concurrency
parking_lot = "0.12"    # 10x faster RwLock than std
crossbeam-epoch = "0.9" # Lock-free memory reclamation
atomic_float = "0.1"    # For AtomicF32 metrics

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# System / Low Level
rand = "0.8"
bit-set = "0.5"   # For efficient Tombstones
thiserror = "1.0"

# Optional: If you want to use AVX-512 explicitly later
# std_detect = "0.1"
