[package]
name = "drift_core"
version = "0.1.0"
edition = "2024"


[dependencies]
# Concurrency
parking_lot = "0.12"       # 10x faster RwLock than std
crossbeam-epoch = "0.9"    # Lock-free memory reclamation
crossbeam-utils = "0.8.21"
atomic_float = "1.1.0"     # For AtomicF32 metrics
hnsw_rs = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

# System / Low Level
rand = "0.9.2"
bit-set = "0.8.0"    # For efficient Tombstones
thiserror = "2.0.17"

# Optional: If you want to use AVX-512 explicitly later
# std_detect = "0.1"
rayon = "1.8"
byteorder = "1.4"
tempfile = "3.23.0"
crc32fast = "1.3"                           # Checksums for blocks
drift_kv = { path = "../drift_kv" }
drift_cache = { path = "../drift_cache" }
drift_traits = { path = "../drift_traits" }
zerocopy = "0.8.31"
async-trait = "0.1.89"
tracing = "0.1"
prost = "0.14.1"


[build-dependencies]
prost-build = "0.14.1"
tonic-build = "0.14.2"
