[package]
name = "drift_kv"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
crc32fast = "1.3"
parking_lot = "0.12"
thiserror = "2.0.17"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zerocopy = { version = "0.8.31", features = ["derive"] }
rand = "0.9.2"                                           # For tests
tempfile = "3.8"                                         # For tests
