[package]
name = "drift_server"
version = "0.1.0"
edition = "2024"

[dependencies]
drift_core = { path = "../drift_core" }
drift_storage = { path = "../drift_storage" }
bincode = { version = "2.0.1", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.23.0"
uuid = { version = "1.0", features = ["v4", "fast-rng"] } # NEW
