[package]
name = "drift_server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
drift_core = { path = "../drift_core" }
drift_storage = { path = "../drift_storage" }
drift_cache = { path = "../drift_cache" }
bincode = { version = "2.0.1", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.23.0"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }                  # NEW
tonic = "0.14.2"
prost = "0.14.1"
tokio-stream = "0.1"
tonic-prost = "0.14.2"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-chrome = "0.7"                                                     # Visual Profiler

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"


[features]
stress-test = []
