[package]
name = "drift_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
drift_core = { path = "../drift_core" }
drift_traits = { path = "../drift_traits" }
bytes = "1.5"                                  # Efficient byte buffer management
tokio = { version = "1", features = ["full"] } # Async I/O
# tokio = { version = "1", features = ["fs", "io-util", "macros"] } # Async I/O
thiserror = "2.0.17"
crc32fast = "1.3"                                                           # Checksums for blocks
memmap2 = "0.9"                                                             # mmap for reading large segments
rand = "0.9.2"
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.23.0"
fastbloom = { version = "0.14", features = ["serde"] }
byteorder = "1.0"
opendal = { version = "0.55.0", features = ["services-fs", "services-s3"] }
url = "2.5"
async-trait = "0.1"                                                         # For PageManager trait
